@@ -201,3 +201,46 @@ TD, P
 	{
 	}
 
+
+.pview /* brackets both the image and all text in one frame */
+{
+	margin:7px;
+	padding: 7px;
+ }
+
+.pcaption /* brackets all text below photo */
+{ 
+	padding:2px;
+	margin-top:2px;
+ }
+
+.presults /* text for poll results under photo  */
+ {
+ }
+
+.vatable /* width of the div set for all photo sets - view albums  */
+ { 
+ 	width: 100%;
+ }
+
+.vaspacer /*  spacing in view album  */
+ { 
+	margin-left: 10px;
+	font-size: 5px;
+ }
+
+.vathumbs /* full background bracket for images and text - veiw albums  */
+ { 
+	margin:17px;
+ }
+
+.vafloat /* float for view album - text */
+ {
+	float: center; 
+	margin-left: 10px;
+ }
+
+.vafloat2 /* float for view album - images */
+ {
+ 	float: center; 
+ }
