@@ -1,4 +1,6 @@
 <?php
 $name=_("bars0002");
 $description=_("Grey background, Grey metal bars, black & red text colors");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
