@@ -1,4 +1,6 @@
 <?php
 $name=_("Bblue");
 $description=_("White with grey pipes and blue highlight");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
