@@ -1,4 +1,6 @@
 <?php
 $name=_("Bgreen2");
 $description=_("White with grey pipes and lime green highlight");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
