@@ -1,4 +1,6 @@
 <?php
 $name=_("Black");
 $description=_("Black with grey pipes");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
