@@ -1,4 +1,6 @@
 <?php
 $name=_("Blue Mod");
 $description=_("Blue cell-like background");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
