@@ -1,4 +1,6 @@
 <?php
 $name=_("Bubbles");
 $description=_("White with pale blue pipes highlights");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
