@@ -1,4 +1,6 @@
 <?php
 $name=_("Butterfly Green");
 $description=_("White with green pipes and butterfly motif");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
