@@ -1,4 +1,6 @@
 <?php
 $name=_("Green Purple");
 $description=_("Green with purple and greend textured pipes");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
