@@ -1,4 +1,6 @@
 <?php
 $name=_("Hot Red");
 $description=_("Black with red pipes and highlights, white text");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
