@@ -1,4 +1,6 @@
 <?php
 $name=_("Jenskin");
 $description=_("A Skin made by Jens. It looks like the config wizard.");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
