@@ -1,4 +1,6 @@
 <?php
 $name=_("Lilac");
 $description=_("Pale purple with grey pipes and white highlight");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
