@@ -1,4 +1,6 @@
 <?php
 $name=_("Paint");
 $description=_("Pastel background with blue pipes and grey text");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
