@@ -1,4 +1,6 @@
 <?php
 $name=_("Red Marble");
 $description=_("Marblelized background with brown pipes and white text");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
