@@ -1,4 +1,6 @@
 <?php
 $name=_("Slick");
 $description=_("Graduated grey background with grey pipes and red highlight");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
