@@ -1,4 +1,6 @@
 <?php
 $name=_("White");
 $description=_("White with pale pipes and rust text");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
