@@ -1,4 +1,6 @@
 <?php
 $name=_("Yellow");
 $description=_("Yellow with yellow pipes and red highlights");
+$version='1.0.0';
+$last_update='2004-18-07';
 ?>
