@@ -1,3 +1,9 @@
+2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b36
+	
+	* Fix: Added css classes to have "old" layout.
+
+	* New: Added version number and Last Update to Skins.
+
 2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b35
 
 	* Change: Continue Skin Changes.
